--- a/service/package.json
+++ b/service/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "glob": "^7.1.2",
     "koa": "^2.5.1",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.5",
     "md5-node": "^1.0.1",
     "mongoose": "^5.1.5"
   }
